[package]
name = "webring-plusplus-server-actix"
version = "0.1.0"
authors = ["blakehawkins <blake.hawkins.11@gmail.com>"]
edition = "2018"
description = "A webring++ service implementation for actix-web"
documentation = "https://docs.rs/webring-plusplus-server-actix"
repository = "https://github.com/webring-plusplus/server-actix"
readme = "README.md"
keywords = ["webring-plusplus", "web", "discovery", "actix", "server"]
license = "Apache-2.0/MIT"

[dependencies]
actix-rt  = "1.1"
actix-web = "3.0"
serde     = "1.0"
